<resources>
    <string name="app_name">Untraceable pw=1, epc=33333333</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">"Untraceable hide TID, show 2w-EPC"</string>
    <string name="action_stop">Stop</string>
    <string name="action_access">Read TID and EPC Test</string>
    <string name="action_restore_public_access">Restore Public Access for TID and EPC</string>
    <string name="action_clesr">Clear UI</string>

    <string-array name="memory_banks">
        <item>MEMORY_BANK_EPC</item>
        <item>MEMORY_BANK_TID</item>
        <item>MEMORY_BANK_USER</item>
        <item>MEMORY_BANK_RESERVED</item>
    </string-array>
</resources>
